--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,5 @@
 FROM python:3.7
 
-EXPOSE 5000
-
 WORKDIR /usr/src/app/backend
 
 COPY requirements.txt ./
@@ -10,4 +8,6 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-CMD python main.py
+EXPOSE 5000
+
+CMD [ "python" , "main.py" ]
