Refactor backend to NestJS and update Docker configuration
- Migrated backend from Flask to NestJS, restructuring the project for improved organization.
- Updated Dockerfile to use Node.js and adjusted build commands.
- Added environment configuration for TMDb API in .env files.
- Modified docker-compose.yml to reflect new service names and dependencies.
- Removed unnecessary Python files and added TypeScript configuration for the new backend.
- Introduced scripts for building user and movie data in JSON format.
- Updated README with new setup instructions and backend architecture details.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
-version: "3"
 services:
-  flask-backend-server:
+  nest-backend-server:
     build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    container_name: flask-backend-server
-    volumes:
-        - ./backend:/usr/src/app/backend
+    container_name: nest-backend-server
+    env_file:
+      - ./backend/.env
   react-ui:
     build:
       context: ./frontend
@@ -16,6 +15,10 @@ services:
     ports: 
       - "3000:3000"
     container_name: react-ui
+    depends_on:
+      - nest-backend-server
+    environment:
+      - REACT_APP_API_URL=http://localhost:5000
     volumes:
       - ./frontend:/usr/src/app/frontend
       - /usr/src/app/frontend/node_modules
